@@ -106,7 +106,7 @@ class Routing extends AbstractRouting
             // autoloader is triggered, trying to load 'myClass', although
             // it is just a string.
             if (is_a($data, '\\Closure')) {
-                // Closures are handled differntly from normalk objects
+                // Closures are handled differently than normal objects
                 $result = $this->pool
                     ->createClass('Brainworxx\\Krexx\\Analyse\\Process\\ProcessClosure')
                     ->process($model);
